; ModuleID = '/home/carl/AnghaBench/php-src/ext/session/extr_session.c_php_session_rfc1867_early_find_sid.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/session/extr_session.c_php_session_rfc1867_early_find_sid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 (i32, i32*, i32*)* }
%struct.TYPE_5__ = type { i32, i64 }

@use_cookies = common dso_local global i32 0, align 4
@sapi_module = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@PARSE_COOKIE = common dso_local global i32 0, align 4
@TRACK_VARS_COOKIE = common dso_local global i32 0, align 4
@use_only_cookies = common dso_local global i32 0, align 4
@PARSE_GET = common dso_local global i32 0, align 4
@TRACK_VARS_GET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @php_session_rfc1867_early_find_sid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @php_session_rfc1867_early_find_sid(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load i32, i32* @use_cookies, align 4
  %4 = call i64 @PS(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %20

6:                                                ; preds = %1
  %7 = load i32 (i32, i32*, i32*)*, i32 (i32, i32*, i32*)** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @sapi_module, i32 0, i32 0), align 8
  %8 = load i32, i32* @PARSE_COOKIE, align 4
  %9 = call i32 %7(i32 %8, i32* null, i32* null)
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i32, i32* @TRACK_VARS_COOKIE, align 4
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %14 = call i64 @early_find_sid_in(i32* %11, i32 %12, %struct.TYPE_5__* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %6
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 1
  store i64 0, i64* %18, align 8
  br label %34

19:                                               ; preds = %6
  br label %20

20:                                               ; preds = %19, %1
  %21 = load i32, i32* @use_only_cookies, align 4
  %22 = call i64 @PS(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %20
  br label %34

25:                                               ; preds = %20
  %26 = load i32 (i32, i32*, i32*)*, i32 (i32, i32*, i32*)** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @sapi_module, i32 0, i32 0), align 8
  %27 = load i32, i32* @PARSE_GET, align 4
  %28 = call i32 %26(i32 %27, i32* null, i32* null)
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i32, i32* @TRACK_VARS_GET, align 4
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %33 = call i64 @early_find_sid_in(i32* %30, i32 %31, %struct.TYPE_5__* %32)
  br label %34

34:                                               ; preds = %25, %24, %16
  ret void
}

declare dso_local i64 @PS(i32) #1

declare dso_local i64 @early_find_sid_in(i32*, i32, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
